deps/jansson/test/suites/invalid/unterminated-empty-key/error.strip
1 2 2
premature end of input near '"'
